@@ -6,6 +6,7 @@ S3method(as.character,shiny.tag.list)
 S3method(as.tags,character)
 S3method(as.tags,default)
 S3method(as.tags,html)
+S3method(as.tags,html_dependency)
 S3method(as.tags,shiny.tag)
 S3method(as.tags,shiny.tag.list)
 S3method(format,html)
