@@ -640,7 +640,7 @@ takeHeads <- function(ui) {
 #'
 #' @export
 findDependencies <- function(tags) {
-  dep <- htmlDependencies(tags)
+  dep <- htmlDependencies(tagify(tags))
   if (!is.null(dep) && inherits(dep, "html_dependency"))
     dep <- list(dep)
   children <- if (is.list(tags)) {
@@ -671,9 +671,9 @@ findDependencies <- function(tags) {
 #' @name builder
 #' @param ... Attributes and children of the element. Named arguments become
 #'   attributes, and positional arguments become children. Valid children are
-#'   tags, single-character character vectors (which become text nodes), and raw
-#'   HTML (see \code{\link{HTML}}). You can also pass lists that contain tags,
-#'   text nodes, and HTML.
+#'   tags, single-character character vectors (which become text nodes), raw
+#'   HTML (see \code{\link{HTML}}), and \code{html_dependency} objects. You can
+#'   also pass lists that contain tags, text nodes, or HTML.
 #' @export tags
 #' @examples
 #' doc <- tags$html(
@@ -947,6 +947,11 @@ as.tags.character <- function(x, ...) {
   # For printing as.tags("<strong>") directly at console, without dropping any
   # attached dependencies
   tagList(x)
+}
+
+#' @export
+as.tags.html_dependency <- function(x, ...) {
+  attachDependencies(tagList(), x)
 }
 
 #' Preserve HTML regions
